Everything is working

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,7 @@
     { "src": "public/**", "use": "@vercel/static" }
   ],
   "routes": [
+    { "src": "/get-razorpay-key", "dest": "/api/server.js" },
     { "src": "/create-subscription", "dest": "/api/server.js" },
     { "src": "/razorpay-webhook", "dest": "/api/server.js" },
     { "src": "/(.*)", "dest": "/public/$1" }
